# MinGL_CMake_Example

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  c-cpp.yml
src/: main.cpp
